<resources>
    <string name="app_name">FirebaseRegister</string>
    <string name="name">Nom et prenom</string>
    <string name="Email">Email</string>
    <string name="User">Pseudo</string>
    <string name="Pass">Mot de passe</string>
    <string name="inscrip">Inscription</string>
    <string name="modif_profil">Modifier son profil</string>
    <string name="enregistrer_btn">Enregistrer</string>
    <string name="s_inscrire">S\'inscrire</string>
    <string name="deja_utilisateur">Etes vous utilisateur ? Connexion</string>
    <string name="conexion">Connexion</string>
    <string name="s_connect">Se connecter</string>
    <string name="register">Inscrivez-vous</string>
    <string name="onlinereg">Préinscription en ligne</string>
    <string name="nom">Nom</string>
    <string name="username">username</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="acctext">Se former</string>
    <string name="btn_prftext">Votre Profil</string>
    <string name="btn_text_cours_ins">Inscrivez-vous à une formation</string>
    <string name="textScreen">Bienvenue sur notre site de formation</string>
    <string name="commencer_la_formation">Commencer la formation</string>
    <string name="forget_password_detail">fournissez votre compte EMAIL pour lequel vous souhaitez réinitialiser votre mot de passe</string>
    <string name="enter_phone_number">phone</string>
    <string name="next_btn">NEXT</string>
    <string name="enter_mail">Email</string>
    <string name="forget_npassword">Forget\nPassword</string>
    <string name="make_selection">Faire une sélection</string>
    <string name="via_sms">Via sms</string>
    <string name="via_mail">Via mail</string>
    <string name="make_selection_detail">Sélectionnez une méthode que nous devons utiliser pour réinitialiser votre mot de passe</string>
    <string name="new_credentials">Nouvelles informations d\'identification</string>
    <string name="new_credentials_detail">Votre identité a été vérifiée\nDéfinissez votre nouveau mot de passe</string>
    <string name="password_updated">Mot de passe mis à jour</string>
    <string name="password_updated_success_message">Votre mot de passe a été mis à jour</string>
    <string name="login">CONNEXION\t\t\t</string>
    <string name="suivez_votre_formation">Suivez votre formation</string>
    <string name="choisir_une_formation">Choisir une formation</string>
    <string name="acc1text">en liberté</string>
    <string name="acc2text">Des formation en ligne pour découvrir, apprendre, progresser et réussir.</string>
    <string name="acc3text">Veillez choisir une formation en remplissant le formulaire ci-dessouss.</string>
    <string name="enregistrer">Enregistrer</string>
    <string name="formation">Formation</string>
    <string name="dur_e">Durée</string>
    <string name="mot_de_passe_oubli">Mot de passe oublié</string>
    <string name="textInformatique">\nLa formation informatique de base est un type de formation qui enseigne les bases de l\'utilisation d\'un ordinateur. Ce type de formation est généralement conçu pour les personnes qui découvrent l\'informatique ou qui ont besoin d\'une remise à niveau sur les compétences informatiques de base.
        \nLes sujets abordés dans la formation informatique de base peuvent varier en fonction du programme de formation spécifique, mais certains sujets communs incluent :
        \n- MHardware et software : cette rubrique couvre les différentes parties d\'un ordinateur, telles que le processeur, la RAM, le disque dur et le moniteur. Il couvre également les différents types de logiciels, tels que les systèmes d\'exploitation, les traitements de texte et les navigateurs Web.
        \n- Périphériques d\'entrée et de sortie : cette rubrique couvre les différentes manières dont les utilisateurs peuvent saisir des données dans un ordinateur, par exemple à l\'aide d\'un clavier, d\'une souris ou d\'un microphone. Il couvre également les différentes façons dont les utilisateurs peuvent sortir des données à partir d\'un ordinateur, comme l\'utilisation d\'une imprimante, d\'un moniteur ou d\'un haut-parleur.
        \n- Systèmes d\'exploitation : cette rubrique couvre les fonctions de base d\'un système d\'exploitation, telles que le démarrage et l\'arrêt d\'un ordinateur, la gestion de fichiers et de dossiers et l\'utilisation d\'applications.
        \n- Logiciels d\'application : cette rubrique couvre l\'utilisation d\'applications spécifiques, telles que les traitements de texte, les tableurs et les logiciels de présentation.</string>
    <string name="pr_requis">Les prérequis pour une formation informatique de base varient en fonction du programme spécifique, mais pour cette formation les conditions préalables courantes incluent :
        \n- Compétences de base en lecture et en écriture : Ceci est nécessaire pour pouvoir lire et comprendre les instructions et le matériel qui seront utilisés dans le programme de formation.
        \n- Compétences de base en mathématiques : Ceci est nécessaire pour pouvoir comprendre les concepts qui seront abordés dans le programme de formation, tels que la gestion de fichiers et la saisie de données.
        \n- Compétences informatiques de base : Ce n\'est pas toujours nécessaire, mais il peut être utile d\'avoir des connaissances de base sur l\'utilisation d\'un ordinateur, comme comment l\'allumer et l\'éteindre, comment utiliser une souris et un clavier, et comment ouvrir et fermer les fichiers.</string>
    <string name="textinfocert">Le MOOC délivrera un badge de suivi avec succès pour les apprenants qui auront obtenu 60% de bonnes réponses aux QCM.</string>
    <string name="textinfoplan">Section 0 : Introduction à l\'informatique et à Internet.\nSection 1 : MHardware et software.\nSection 2 : Périphériques d\'entrée et de sortie.\nSection 3 : Systèmes d\'exploitation.\nSection 4 : Logiciels d\'application.\nSection 5 : Conclusion</string>
    <string name="textEnergetique">\nLa formation énergétique de base est un type de formation qui enseigne les principes fondamentaux de l\'énergie, tels que les différents types d\'énergie, comment l\'énergie est utilisée et comment conserver l\'énergie. Cette formation est généralement conçu pour les personnes qui découvrent l\'énergie ou qui ont besoin d\'un rappel sur les concepts énergétiques de base.\n\nLes sujets abordés dans cette formation énergétique de base peuvent varier en fonction du programme de formation spécifique, mais certains sujets communs incluent :
        \n- Types d\'énergie : Ce sujet couvre les différentes formes d\'énergie, telles que l\'énergie solaire, l\'énergie éolienne et l\'énergie hydroélectrique. Il couvre également la différence entre les énergies renouvelables et non renouvelables.
        \n- Consommation d\'énergie : ce sujet couvre la façon dont l\'énergie est utilisée dans nos maisons, nos entreprises et nos systèmes de transport. Il couvre également l\'impact de l\'utilisation de l\'énergie sur l\'environnement.
        \n- Conservation de l\'énergie : ce sujet couvre les moyens de réduire notre consommation d\'énergie, comme l\'utilisation d\'appareils éconergétiques, l\'extinction des lumières lorsque nous quittons une pièce et le débranchement des appareils électroniques lorsqu\'ils ne sont pas utilisés.</string>
    <string name="prerequisEnergetique">Il n\'y a pas de prérequis formels pour la formation énergétique de base. Cependant, certains programmes peuvent exiger que vous ayez une compréhension de base des sciences ou des mathématiques.
        \n
        \n- Compétences de base en lecture et en écriture : Vous devrez être capable de lire et de comprendre le matériel qui sera utilisé dans le programme de formation.
        \n- Compétences de base en mathématiques : Vous devrez être en mesure de comprendre les concepts qui seront abordés dans le programme de formation, tels que la conservation et l\'efficacité énergétique.
        \n- Une volonté d\'apprendre : La formation énergétique de base est un excellent moyen d\'en apprendre davantage sur l\'énergie et sur la façon de la conserver. Si vous êtes prêt à apprendre, vous réussirez dans le programme.</string>
    <string name="textenergcer">Le MOOC délivrera un badge de suivi avec succès pour les apprenants qui auront obtenu 60% de bonnes réponses aux QCM.</string>
    <string name="textenergplan">Section 0 : Introduction à l\'énergetique.\nSection 1 : Types d\'énergie.\nSection 2 : Consommation d\'énergie.\nSection 3 : Conservation de l\'énergie.\nSection 4 : Conclusion.</string>
    <string name="textgcivil">\nLe génie civil est un vaste domaine qui englobe la conception, la construction et l\'entretien d\'infrastructures telles que les routes, les ponts, les bâtiments et les systèmes d\'approvisionnement en eau. Les techniciens civils utilisent leurs connaissances en mathématiques, en sciences et en ingénierie pour résoudre des problèmes liés à l\'environnement bâti.
        \nCette formation de base en génie civil couvrira généralement les sujets suivants :
        \n- Mathématiques et sciences : les techniciens civils doivent maîtriser les mathématiques et les sciences, en particulier le calcul, la physique et la chimie.
        \n- Principes d\'ingénierie : les techniciens civils doivent comprendre les principes d\'iVoici quelques-unes des compétences dont vous aurez besoin pour réussir votre formation énergétique de base :ngénierie, tels que l\'analyse structurelle, la mécanique des fluides et la thermodynamique.
        \n- Conception : les techniciens civils utilisent leurs connaissances en mathématiques, en sciences et en ingénierie pour concevoir des projets d\'infrastructure.
        \n- Construction : Les techniciens civils supervisent la construction des projets d\'infrastructure, s\'assurant qu\'ils sont construits selon le plan et les spécifications.
        \n- Maintenance : les techniciens civils entretiennent les projets d\'infrastructure, en veillant à ce qu\'ils soient sûrs et fonctionnels.</string>
    <string name="textDroit">\nLe Droit vous passionne depuis toujours. C’est cette voie que vous voulez choisir.\n\nMais êtes-vous sûr de ne pas vous tromper ? Comment savoir si les études de vos rêves ne vont pas virer au cauchemar ? Plongez tout de suite au cœur de cet univers fascinant pour les uns, hermétique pour les autres.\n\nVenez découvrir le secret des cours, de la vie étudiante et des métiers du droit avec l’Université Paris-Panthéon-Assas. Et ne restez pas sans réponse face à cette cruciale question : « Le droit, est-ce vraiment pour moi ? »</string>
    <string name="prerequisDroit">Ce MOOC est destiné à toute personne intéressée par le droit et en particulier par les études de droit.</string>
    <string name="textDroitCer">Le MOOC délivrera un badge de suivi avec succès pour les apprenants qui auront obtenu 60% de bonnes réponses aux QCM.</string>
    <string name="textDroitPlan">Section 0 : Présentation générales des études de droit.\nSection 1 : Présentation des métiers juridiques.\nSection 2 : Présentation de la méthodologie juridique.\nSection 3 : Présentation des fondamentaux et des spécialisations du droit.\nSection 4 : Conclusion</string>
</resources>