<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pagebkg"
    android:padding="20dp"
    tools:context=".HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@color/white"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/img" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:fontFamily="@font/acme"
            android:text="@string/textScreen"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="50dp">

            <Button
                android:id="@+id/btn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/s_connect"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:layout_marginRight="10dp" />
            <Button
                android:id="@+id/btn_sigup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/s_inscrire"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>

</ScrollView>