<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/white"
android:padding="30dp"
tools:context=".ForgetPassword">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="50dp"
    android:orientation="vertical">




    <ImageView
        android:id="@+id/forget_password_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:src="@drawable/forget_password_icon" />


    <TextView
        android:id="@+id/forget_password_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="36dp"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/forget_npassword"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="30sp" />


    <TextView
        android:id="@+id/forget_password_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="36dp"
        android:gravity="center"
        android:text="@string/forget_password_detail"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp" />


<!--        <com.hbb20.CountryCodePicker-->
<!--            android:id="@+id/country_code_picker"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="30dp"-->
<!--            android:background="@drawable/black_border"-->
<!--            android:padding="7dp"-->
<!--            app:ccp_autoDetectCountry="true"-->
<!--            app:ccp_showFlag="true"-->
<!--            app:ccp_showFullName="true"-->
<!--            app:ccp_showNameCode="true" />-->


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/forget_password_mail"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/enter_mail"
            android:textColorHint="@color/black"
            app:boxBackgroundColor="@color/lightWhite"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidthFocused="2dp"
            app:endIconMode="clear_text"
            app:endIconTint="@color/black"
            app:hintTextColor="@color/black"
            app:startIconDrawable="@drawable/ic_baseline_email_24"
            app:startIconTint="@color/black">


            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="phone"
                android:textColor="@color/black"
                android:textCursorDrawable="@null" />


        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/forget_password_next_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/forget_password_mail"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimary"
            android:onClick="verifyMail"
            android:text="@string/next_btn"
            android:textColor="@color/black" />


</LinearLayout>


</ScrollView>

