<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@drawable/profilebkg"
    tools:context=".ProfileActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:id="@+id/profileImg"
            android:src="@drawable/img_4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:id="@+id/titleName"
            android:layout_marginTop="10dp"
            android:text="@string/nom"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/profileImg"
            app:layout_constraintStart_toStartOf="@id/profileImg"
            app:layout_constraintTop_toBottomOf="@id/profileImg"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:id="@+id/titleUsername"
            android:layout_marginTop="10dp"
            android:text="@string/username"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@id/profileImg"
            app:layout_constraintStart_toStartOf="@id/profileImg"
            app:layout_constraintTop_toBottomOf="@id/titleName"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout"
            android:orientation="vertical"
            android:padding="5dp"
            android:background="@drawable/white_background"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleName">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/username"
                    android:layout_weight="1"
                    android:text="@string/User"
                    android:textStyle="bold"
                    android:textColor="@color/lavender"
                    android:textSize="18sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/profileUsername"
                    android:text="@string/User"
                    android:layout_weight="1"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/grey"
                    android:textSize="18sp"
                    android:gravity="end" />

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="5dp"
                android:alpha="0.5"
                android:background="@color/lavender"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:padding="8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/email"
                    android:layout_weight="1"
                    android:text="@string/Email"
                    android:textStyle="bold"
                    android:textColor="@color/lavender"
                    android:textSize="18sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/profileEmail"
                    android:text="@string/Email"
                    android:layout_weight="1"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/grey"
                    android:textSize="18sp"
                    android:gravity="end" />

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="5dp"
                android:alpha="0.5"
                android:background="@color/lavender"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:padding="8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/nomformation"
                    android:layout_weight="1"
                    android:text="Formation"
                    android:textStyle="bold"
                    android:textColor="@color/lavender"
                    android:textSize="18sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/nomformation1"
                    android:text="Nom"
                    android:layout_weight="1"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/grey"
                    android:textSize="18sp"
                    android:gravity="end" />

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="5dp"
                android:alpha="0.5"
                android:background="@color/lavender"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:padding="8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tempsformation"
                    android:layout_weight="1"
                    android:text="Durée"
                    android:textStyle="bold"
                    android:textColor="@color/lavender"
                    android:textSize="18sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tempsformation1"
                    android:text="Temps"
                    android:layout_weight="1"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/grey"
                    android:textSize="18sp"
                    android:gravity="end" />

            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_margin="20dp">
            <Button
                android:id="@+id/btn_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/commencer_la_formation"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center" >
        <Button
                android:id="@+id/modifButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/modif_profil" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>