<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="5dp"
    tools:context=".tableau_de_bord.DroitActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginBottom="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/DroitTitle"
                android:fontFamily="@font/poppins_light"
                android:gravity="center"
                android:text="Droit pour tous"
                android:textColor="@color/lavender"
                android:textSize="36sp" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Durée :"
                    android:fontFamily="@font/poppins_light"
                    android:textColor="@color/lavender"
                    android:drawablePadding="8dp"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:layout_marginRight="5dp"
                    app:drawableLeftCompat="@drawable/ic_baseline_access_time_filled_24" />
                <TextView
                    android:id="@+id/dureeDroit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:fontFamily="@font/poppins_light"
                    android:layout_weight="2" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Rythme :"
                    android:fontFamily="@font/poppins_light"
                    android:textColor="@color/lavender"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:layout_marginRight="5dp"
                    android:drawablePadding="8dp"
                    app:drawableLeftCompat="@drawable/baseline_av_timer_24"/>
                <TextView
                    android:id="@+id/rythmeDroit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:fontFamily="@font/poppins_light"
                    android:layout_weight="2"/>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_light"
                android:text="@string/textDroit"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Prérequis"
                android:textSize="36sp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/poppins_light"
                android:textColor="@color/lavender" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prerequisDroit"
                android:fontFamily="@font/poppins_light" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Evaluation et Certification"
                android:textSize="30sp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/poppins_light"
                android:textColor="@color/lavender" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textDroitCer"
                android:fontFamily="@font/poppins_light" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Plan de la formation"
                android:textSize="36sp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/poppins_light"
                android:textColor="@color/lavender" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textDroitPlan"
                android:fontFamily="@font/poppins_light" />
        </LinearLayout>
        <Button
            android:id="@+id/btnDroit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="suivre la formation"
            android:layout_gravity="center"/>
    </LinearLayout>

</ScrollView>
